done everything upto login and logout

--- a/ACL cable server/nbproject/project.properties
+++ b/ACL cable server/nbproject/project.properties
@@ -31,8 +31,8 @@ file.reference.mysql-connector-java-5.1.39-bin.jar=F:\\ACL project\\mysql-connec
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.ACL_cable_Comman.jar}:\
-    ${file.reference.mysql-connector-java-5.1.39-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.39-bin.jar}:\
+    ${reference.ACL_cable_Comman.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
